Client: prevent layout repositioning due to scrollbar visibility

--- a/vuhaisan/app/assets/stylesheets/client.css
+++ b/vuhaisan/app/assets/stylesheets/client.css
@@ -1,6 +1,10 @@
 /*
 === COMMON ===
 */
+body {
+  overflow: scroll
+}
+
 #menuBar {
   width: 100%;
   height: 50px;
